--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        server: ftp://154.41.240.29
+        server: 154.41.240.29
         username: u650050743.yuracompanypalu
         password: QSxbKcz&_7Pdn3N
